# motra-capture

./: .gitignore  README.md  pyproject.toml
src/capcon/: baseline_perf.py  bruteforce.py  capcontrol.py  ettercap.py  flood.py  gen_all.sh  gen_baseline_examples.py  log_payload.py  nmap.py  opc.py  payload.py  perf_stat.py  systemd_time.py
src/capcon/examples/: limits-test-0001.json  mongodb-perf-bruteforce-np-0001.json  mongoose-perf-bruteforce-p-0001.json  mysql-perf-bruteforce-p-0001.json  postgres-perf-bruteforce-np-0001.json  postgres-perf-bruteforce-p-0001.json  ssh-perf-bruteforce-p-0001.json  tcpdump-perf-none-np-0001.json
src/capcon/util/: payload.py  systemd_time.py
src/motra/cli/: capcon_cli.py  choices.py  cli.py  client_cli.py  mexec_cli.py  server_cli.py  workspace_cli.py
src/motra/client/: client_connection.py  configuration.py  measurement_client.py  requests.py
src/motra/common/: __init__.py  archive.py  capcon.py  capcon_protocol.py  exec_environment.py  literals.py  response_types.py  schedule.py  systemd.py  util.py
src/motra/debug/: graph_plot.py
src/motra/logging/: client_config.py  log_config.py  server_config.py
src/motra/mexec/: mexec.py
src/motra/server/: configuration.py  file_upload.py  lifespan.py  (+2 more)
test/: bgnoise-perf-none-np-0001.json  log-test-0001.json  mongodb-perf-bruteforce-p-0001.json  mongoose-perf-bruteforce-np-0001.json  mysql-perf-bruteforce-np-0001.json  redis-perf-bruteforce-np-0001.json  redis-perf-bruteforce-p-0001.json  ssh-perf-bruteforce-np-0001.json  tcpdump-perf-none-np-0001.json  time-test-0001.json
(+4 files in other folders)
